--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   ],
   "dependencies": {},
   "peerDependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "16 - 17"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
