--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.13",
   "author": "Justin Mahar <contact@justinmahar.com>",
   "description": "Convenience TypeScript type definitions for all HTML element props.",
-  "homepage": "https://justinmahar.github.io/react-html-props/",
+  "homepage": "https://github.com/justinmahar/react-html-props",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
