--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-html-props",
   "version": "1.0.20",
   "author": "Justin Mahar <contact@justinmahar.com>",
-  "description": "Convenient TypeScript types for all HTML element React props.",
+  "description": "Convenient TypeScript types for all React HTML props.",
   "homepage": "https://github.com/justinmahar/react-html-props",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
