--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
   "bugs": {
     "url": "https://github.com/justinmahar/react-html-props/issues"
   },
-  "keywords": [],
+  "keywords": [
+    "react",
+    "html",
+    "props",
+    "prop types",
+    "typescript",
+    "react html props"
+  ],
   "peerDependencies": {
     "react": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0 || ^20.0.0",
     "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0 || ^20.0.0"
